# tesla-wall-connector

./: README.md
monitor/: .gitignore  README.md  pyproject.toml
monitor/deploy/: install-service.sh
monitor/deploy/ntfy/: docker-compose.yml
monitor/tests/: test_wallmonitor.py
monitor/wallmonitor/: __init__.py  __main__.py  alert_codes.json  config.py  db.py  poller.py  simulator.py  thermal.py  web.py
monitor/wallmonitor/static/: __init__.py  app.js  index.html  style.css
