[project]
name = "wallmonitor"
version = "0.1.0"
description = "Local-only monitoring and recording UI for a Tesla Wall Connector Gen 3"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
  "aiohttp>=3.13.5,<4",
  "tesla-wall-connector",
]

[tool.uv.sources]
tesla-wall-connector = { path = "..", editable = true }

[dependency-groups]
dev = [
  "pytest>=9.1,<10",
  "pytest-asyncio>=1.4,<2",
]

[build-system]
requires = ["uv_build>=0.11.6,<0.12"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-root = ""
module-name = "wallmonitor"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
